--- a/index/template.tex
+++ b/index/template.tex
@@ -34,7 +34,7 @@
 %% link colours
 \hypersetup{%
   colorlinks=true,
-  linkcolor=magenta,
+  linkcolor=black,
   anchorcolor=black,
   citecolor=green,
   filecolor=cyan,
