--- a/index/01-chap1.Rmd
+++ b/index/01-chap1.Rmd
@@ -1,14 +1,13 @@
 ---
 output: 
-  thesisdown::thesis_pdf: 
-    toc: true
-    toc-depth: 2
-    latex: pdflatexbibliography: bib/library.bib
+    thesisdown::thesis_pdf: default
+bibliography: bib/thesis.bib
 csl: csl/nature.csl
 space_betwee_paragraphs: true
 fig_caption: true
 always_allow_html: yes
 link-citations: true
+toc-depth: 2
 lot: true
 lof: true
 indent: true
